--- a/index.html
+++ b/index.html
@@ -18,20 +18,26 @@
 
 <body>
     <div class="h-100 row align-items-center container">
-        <div class="col-sm content container">
-            <div class="col-sm-4">
-                <img alt="Avatar" height="175"
-                    src="https://www.gravatar.com/avatar/0b591304e8350f32bed8b43ba2443b46?s=500">
-            </div>
-            <div class="align-middle" style="text-align:center!important;">
-                <div class="col-sm">
-                    <h1>Ryah/Sean</h1>
+        <div class="content container">
+            <div style="display:table;">
+                <div class="col-sm-4">
+                    <img alt="Avatar" height="175"
+                        src="https://www.gravatar.com/avatar/0b591304e8350f32bed8b43ba2443b46?s=500">
                 </div>
-                <div class="container col-sm">
-                    <div class="col-sm">
-                        <a href="https://github.com/Ryah" rel="noopener noreferrer" target="_blank">
-                            <i class="fa fa-github col"></i>
-                        </a>
+                <div style="display:table-cell;vertical-align:middle;">
+                    <div style="margin-left:auto;margin-right:auto;">
+                        <div class="align-middle" style="text-align:center!important; width: 60%;">
+                            <div class="col-sm">
+                                <h1>Ryah/Sean</h1>
+                            </div>
+                            <div class="container col-sm">
+                                <div class="col-sm">
+                                    <a href="https://github.com/Ryah" rel="noopener noreferrer" target="_blank">
+                                        <i class="fa fa-github col"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
