--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 <h1>Ryah/Sean</h1>
                             </div>
                             <div class="container col-sm">
-                                <div class="col-sm">
+                                <div class="col-sm" style="padding-left:37px;">
                                     <a href="https://github.com/Ryah" rel="noopener noreferrer" target="_blank">
                                         <i class="fa fa-github col"></i>
                                     </a>
