--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                                 <h1>Ryah/Sean</h1>
                             </div>
                             <div class="container col-sm">
-                                <div class="col-sm" style="padding-left:37px;">
+                                <div class="col-sm" style="left: 37px;">
                                     <a href="https://github.com/Ryah" rel="noopener noreferrer" target="_blank">
-                                        <i class="fa fa-github col"></i>
+                                        <i class="fa fa-github col" style="left:-13px"></i>
                                     </a>
                                 </div>
                             </div>
