--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div style="display:table-cell;vertical-align:middle;">
                     <div style="margin-left:auto;margin-right:auto;">
-                        <div class="align-middle" style="text-align:center!important; width: 60%;">
+                        <div class="align-middle">
                             <div class="col-sm">
                                 <h1>Ryah/Sean</h1>
                             </div>
