--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <div class="col-sm">
                                 <h1>Ryah/Sean</h1>
                             </div>
-                            <div class="container col-sm">
+                            <div class="container col-sm" style="height: inherit;">
                                 <div class="col-sm" style="left: 37px;">
                                     <a href="https://github.com/Ryah" rel="noopener noreferrer" target="_blank">
                                         <i class="fa fa-github col" style="left:-13px"></i>
