--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <!-- <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet"></head> -->
 
 <body>
-    <div class="h-100 row align-items-center container">
+    <div class="h-100 row align-items-center container"
+        style="margin-right: 0px; padding-right: 0px; margin-left: 0px; padding-left: 0px;">
         <div class="content container">
             <div style="display:table;">
                 <div class="col-sm-4">
