--- a/index.html
+++ b/index.html
@@ -3,44 +3,33 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="ie=edge" http-equiv="X-UA-Compatible">
-    <title>Ryah/Sean</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
-        rel="stylesheet" />
-    <link href="style.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet"></head> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Native CSS Start -->
+    <link rel="stylesheet" href="css/index.css">
+    <!-- Native CSS End -->
+
+    <!-- Fontawesome Start -->
+    <script src="https://kit.fontawesome.com/94b68a0c09.js" crossorigin="anonymous"></script>
+    <!-- Fontawesome End -->
+
+    <title>Ryah Portfolio</title>
+</head>
 
 <body>
-    <div class="h-100 row align-items-center container"
-        style="margin-right: 0px; padding-right: 0px; margin-left: 0px; padding-left: 0px;">
-        <div class="content container">
-            <div style="display:table;">
-                <div class="col-sm-4">
-                    <img alt="Avatar" height="175"
-                        src="https://www.gravatar.com/avatar/0b591304e8350f32bed8b43ba2443b46?s=500">
-                </div>
-                <div style="display:table-cell;vertical-align:middle;">
-                    <div style="margin-left:auto;margin-right:auto;">
-                        <div class="align-middle">
-                            <div class="col-sm">
-                                <h1>Ryah/Sean</h1>
-                            </div>
-                            <div class="container col-sm" style="height: inherit;">
-                                <div class="col-sm" style="left: 37px;">
-                                    <a href="https://github.com/Ryah" rel="noopener noreferrer" target="_blank">
-                                        <i class="fa fa-github col" style="left:-13px"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <div class="container">
+        <div class="child-container">
+            <img class="profile" src="res/profile.png" alt="Profile Picture">
+            <h1 class="username">
+                Ryah
+            </h1>
+            <p class="bio">
+                Hi there! I'm Ryah, and welcome to my portfolio.<br>I'm a person, homo sapiens, human being.
+            </p>
+
+            <div class="links">
+                <a href="https://discord.com/users/236561912597446666"><i class="fa-brands fa-discord"></i></a>
+                <a href="https://github.com/Ryah"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
     </div>
